<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.connxun.morui.viewmodel.LoginViewModel" />
        <variable
            name="presenter"
            type="com.connxun.morui.view.helper.presenter.Presenter"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="25dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/head_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@mipmap/ic_app_logo" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:forceHasOverlappingRendering="true">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/mobile"
                    android:imeActionId="@+id/input_pwd"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={vm.userName}"
                    tools:ignore="InvalidImeActionId" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/password_text"
                    android:imeActionId="@+id/login_btn"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={vm.userPassWord}"
                    tools:ignore="InvalidImeActionId" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/radios_bg_login_btn"
                android:onClick="@{vm.loginTest}"
                android:text="@string/login_text"
                android:textColor="#ffffff" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forget_pwd"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_14" />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_size_14" />


    </LinearLayout>
</layout>